--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "format": "prettier --write *.js **/*.js"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
@@ -13,6 +14,7 @@
     "prisma": "^5.14.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
